[metadata]
name = hlm_toolkit
version = attr: hlm_toolkit.VERSION
author = Hudson Mendes
author_email = hudsonmendes@gmail.com
description = LLM-powered BOT for Digital Automation
long_description = file: README.md, LICENSE
keywords = chat-gpt, bot, artificial intelligence
license = copyright

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
python_requires = >=3.10
install_requires =
    fire
    # no dependencies yet

[options.package_data]

[options.entry_points]
console_scripts =
    executable-name = p10x_ai:launch

[options.extras_require]
dev =
    coverage>=7.2.3
    pytest>=7.3.1
    isort>=5.12.0
    flake8

[options.packages.find]
include =
    ./src
